# cactus

./: .gitignore  README.md  ds_config.json  gpu_client.py  gpu_load.py  gpu_loadrust.py  gpu_registration.py  gpu_server.py  gpu_training.py  requirements.txt  train.py
contracts/: .coverage_map.mvcov  Move.toml  README.md
contracts/sources/: cactus_payment.move
models_config/: branch_config.json  models.json  temp_departments.json
rust/: Cargo.toml  build.rs  bundle_release.py  cactus-desktop.rc  run_client.bat
rust/models_config/: models.json
rust/src/: desktop_client.rs  desktop_client.rs.bak  main.rs
rust/src/client/: manager.rs  mod.rs  model_manager.rs
rust/src/protocol/: types.rs
rust/src/server/: mod.rs  registry.rs
