[package]
name = "gpu-protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
axum = { version = "0.7", features = ["ws", "macros"] }
hyper = { version = "1.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
tower-http = { version = "0.5", features = ["cors"] }
clap = { version = "4.5", features = ["derive"] }
base64 = "0.21"
image = "0.24"
paris = "1.5"
pyo3 = { version = "0.19", features = ["auto-initialize"] }

[[bin]]
name = "gpu-protocol"
path = "src/main.rs" 