[package]
name = "cactus"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
axum = { version = "0.7", features = ["ws", "macros"] }
hyper = { version = "1.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
tower-http = { version = "0.5", features = ["cors"] }
clap = { version = "4.5", features = ["derive"] }
base64 = "0.21"
image = { version = "0.24", features = ["ico"] }
paris = "1.5"
pyo3 = { version = "0.19", features = ["auto-initialize"] }
# Desktop application dependencies
egui = "0.22.0"
eframe = "0.22.0"
dirs = "5.0.1"
winapi = { version = "0.3", features = ["winuser"] }

[build-dependencies]
embed-resource = "1.8"

[[bin]]
name = "cactus"
path = "src/main.rs"

[[bin]]
name = "cactus-desktop"
path = "src/desktop_client.rs" 